# Task-manager

./: .coveragerc  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml
.github/workflows/: python.yml
task_manager/: mixins.py  settings.py  views.py
task_manager/labels/: views.py
task_manager/statuses/: views.py
task_manager/tasks/: views.py
task_manager/templates/: base.html
task_manager/users/: urls.py  views.py
