[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = ["LeitoKonor <joltrico96@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
gunicorn = "^21.2.0"
django-bootstrap4 = "^23.2"
whitenoise = "^6.5.0"
django-extensions = "^3.2.3"
django-filter = "^23.2"
rollbar = "^0.16.3"
psycopg2-binary = "^2.9.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.3.0"
ipython = "^8.14.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
